test/expected/ns_c_ns_c.out
namespace N { class C; }; namespace N::C { class D; }
           ^
12: error: "N::C" was previously declared as class:
> namespace N { class C; }
